--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^6.9.4",
     "@pinia/nuxt": "^0.5.1",
     "@vueuse/nuxt": "^10.6.0",
+    "eslint": "^8.54.0",
     "nuxt": "^3.8.0",
+    "nuxt-lodash": "^2.5.3",
     "vue": "^3.3.7",
     "vue-router": "^4.2.5"
   },
