add leftbar in NCKU

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "add CP": "npx nuxi add component LoadingView"
+    "add CP": "npx nuxi add component TaiwanBarView"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
