--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "nuxt-app",
   "private": true,
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "add CP": "npx nuxi add component TaiwanBarView"
+    "add component": "npx nuxi add component TaiwanBarView",
+    "add api": "npx nuxi add api count",
+    "add composable": "npx nuxi add composable count",
+    "format": "npx prettier pages/index.vue --write",
+    "format all": "npx prettier --write ."
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
@@ -25,6 +29,8 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "firebase": "^10.5.2"
+    "firebase": "^10.5.2",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7"
   }
 }
