--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "firebase": "^10.5.2",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
+    "ts-node": "^10.9.1",
     "vue-chartjs": "^5.2.0"
   }
 }
