--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "nuxt-lodash": "^2.5.3",
     "sass": "^1.69.5",
     "vue": "^3.3.7",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-tsc": "^1.8.25"
   },
   "dependencies": {
     "chart.js": "^4.4.0",
