--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sass": "^1.69.5",
     "vue": "^3.3.7",
     "vue-router": "^4.2.5",
+    "vue-scrollto": "^2.20.0",
     "vue-tsc": "^1.8.25"
   },
   "dependencies": {
