--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
   "dependencies": {
     "chart.js": "^4.4.0",
     "firebase": "^10.5.2",
+    "firebase-admin": "^12.0.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "ts-node": "^10.9.1",
-    "vue-chartjs": "^5.2.0"
+    "vue-chartjs": "^5.2.0",
+    "vuefire": "^3.1.19"
   }
 }
