--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "chart.js": "^4.4.0",
     "firebase": "^10.5.2",
     "firebase-admin": "^12.0.0",
+    "firebase-tools": "^13.0.2",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "ts-node": "^10.9.1",
     "vue-chartjs": "^5.2.0",
