--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-typescript": "^0.14.0",
     "nuxt": "^3.8.0",
     "nuxt-icon": "^0.6.6",
     "nuxt-lodash": "^2.5.3",
     "prettier": "^3.1.0",
     "sass": "^1.69.5",
+    "typescript": "^5.3.3",
+    "typescript-eslint-parser": "^22.0.0",
     "vue": "^3.3.7",
     "vue-router": "^4.2.5",
     "vue-scrollto": "^2.20.0",
