--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "format": "npx prettier pages/index.vue --write",
     "format all": "npx prettier --write .",
     "lint": "eslint --ext .ts,.js,.vue .",
-    "deploy": "gh-pages --dotfiles -d .output/public"
+    "deploy": "gh-pages --dotfiles -d .output/public",
+    "test": "jest"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
@@ -22,11 +23,15 @@
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^6.9.4",
     "@pinia/nuxt": "^0.5.1",
+    "@vue/test-utils": "^2.4.3",
     "@vueuse/nuxt": "^10.6.0",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-typescript": "^0.14.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "naive-ui": "^2.34.4",
     "nuxt": "^3.8.0",
     "nuxt-icon": "^0.6.6",
     "nuxt-lodash": "^2.5.3",
@@ -35,6 +40,7 @@
     "typescript": "^5.3.3",
     "typescript-eslint-parser": "^22.0.0",
     "vue": "^3.3.7",
+    "vue-jest": "^3.0.7",
     "vue-router": "^4.2.5",
     "vue-scrollto": "^2.20.0",
     "vue-tsc": "^1.8.25"
