--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "add component": "npx nuxi add component RightBarView",
-    "add api": "npx nuxi add api count",
+    "add page": "npx nuxi add page login/whoami",
+    "add component": "npx nuxi add component hello",
+    "add api": "npx nuxi add api auth/whoami.get",
     "add composable": "npx nuxi add composable count",
     "format": "npx prettier pages/index.vue --write",
     "format all": "npx prettier --write .",
@@ -29,8 +30,10 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-typescript": "^0.14.0",
+    "google-auth-library": "^9.4.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
     "naive-ui": "^2.34.4",
     "nuxt": "^3.8.0",
     "nuxt-icon": "^0.6.6",
@@ -43,7 +46,8 @@
     "vue-jest": "^3.0.7",
     "vue-router": "^4.2.5",
     "vue-scrollto": "^2.20.0",
-    "vue-tsc": "^1.8.25"
+    "vue-tsc": "^1.8.25",
+    "vue3-google-login": "^2.0.25"
   },
   "dependencies": {
     "chart.js": "^4.4.0",
