--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "vue3-google-login": "^2.0.25"
   },
   "dependencies": {
+    "@nuxtjs/firebase": "^8.2.2",
     "chart.js": "^4.4.0",
     "firebase": "^10.5.2",
     "firebase-admin": "^12.0.0",
